# jacdac-rs

./: Cargo.toml  README.md
examples/: buffer_test.rs
src/: brain.rs  brain_device.rs  brain_error.rs  error.rs  lib.rs
src/brain/: brain.rs  brain_device.rs
src/service/: button.rs  control.rs  control_report.rs  event_report.rs  mod.rs  packet.rs  packet_type.rs  reports.rs  serivce_error.rs  service.rs
src/transport/: frame.rs  frame_flag.rs  packet.rs  serice_index.rs  service_command.rs  transport_error.rs
